src/css/iconTheming.scss
$svg-stroke-hex-to-var: (
    "#FFBF00": --Y500,
    "white": --white,
    "#FF5656": --R500,
    "#596168": --N700,
    "#fff": --white,
    "#0066CC": --B500,
    "#3B444C": --N700,
    "#000A14": --N900,
    "#664BEE": --V500,
    "#1DAD70": --G500,
    "#959BA1": --N400,
    "#D0D4D9": --N200,
    "#767D84": --N500,
    "#404040": --N700,
    "#F33E3E": --R500,
    "#06C": --B500,
    "#F32E2E": --R500,
    "#5865F2": --V500,
    "#B1B7BC": --N300,
    "#C58D36": --Y600,
    "#8C6324": --Y700,
    "#423BD1": --V600,
    "#D2D2D2": --N200,
    "#FDE7E7": --R100,
    "#FF7E5B": --O500,
    "#231F20": --N900,
    "#AFAFAF": --N300,
    "#ABCFF3": --B200,
    "#E6EEFC": --N100,
    "#1D2730": --N800,
    "#106240": --G700,
    "#B21212": --R700,
    "#B23412": --O700,
    "#FF9900": --Y500,
    "#3989D9": --B400,
    "#FFB549": --Y500,
    "#E9FBF4": --G100,
);

$svg-fill-hex-to-var: (
    "#0F1689": --V700,
    // "#4285F4": --B400,
    // "#34A853": --G500,
    // "#FBBC05": --Y500,
    // "#EB4335": --R500,
    // "#1A1919": --N900,
    // "#F25022": --O500,
    // "#80BA01": --G400,
    // "#02A4EF": --B300,
    // "#FFB902": --Y500,
    // "#F8931E": --O500,
    // "#B3B3B3": --N300,
    // "#C22133": --R600,
    // "#DB212E": --R600,
    // "#EB2126": --R600,
    // "#AD213B": --R700,
    // "#BA2133": --R700,
    // "#CB2026": --R600,
    // "#A91E23": --R700,
    "#D0D4D9": --N200,
    "#E5F2FF": --B100,
    "#72ACE6": --B300,
    "#ABCFF3": --B200,
    "#3989D9": --B400,
    "#0066CC": --B500,
    "#596168": --N600,
    // "#2E5AD3": --B400,
    // "#EB9246": --O600,
    // "white": --white,
    // "#0F1689": --V700,
    // "#FE636E": --R400,
    // "#FFD659": --Y400,
    // "#FB2A39": --R500,
    // "#FFBF00": --Y500,
    // "#99B4CD": --B200,
    // "#06C": --B500,
    // "#FFF": --white,
    // "#6C9ABB": --B200,
    // "#EBEBEB": --N200,
    // "#0053A6": --B600,
    // "#8898A6": --N400,
    // "#F4910D": --O500,
    // "#66757F": --N500,
    // "#423BD1": --V600,
    // "#FF2D6B": --R400,
    "#4A4A4A": --N700,
    "#959BA1": --N400,
    // "#999": --N400,
    // "#D8D8D8": --N200,
    "#F33E3E": --R500,
    "#E6F5F8": --B100,
    // "#E9654B": --O600,
    // "#B6CFEA": --B200,
    // "#D0E8F0": --B100,
    // "#EE794B": --O600,
    // "#E34E3B": --O600,
    // "#FBDFC3": --Y200,
    // "#010101": --N900,
    "#767D84": --N500,
    "#000A14": --N800,
    // "#876929": --Y700,
    // "#D9A741": --Y600,
    // "#0078D4": --B500,
    "#1D2730": --N800,
    // "#979797": --N400,
    "#8C6324": --Y700,
    // "#FF6D00": --O600,
    // "#DD2E44": --R600,
    // "#EA596E": --R400,
    // "#A0041E": --R700,
    // "#AA8DD8": --V200,
    // "#77B255": --G400,
    // "#5C913B": --G600,
    // "#9266CC": --V500,
    // "#FFCC4D": --Y400,
    "#3B444C": --N700,
    // "#29CC7A": --G400,
    "#F7FAFC": --N50,
    // "#56A3D9": --B300,
    // "#F1626E": --R400,
    "#1DAD70": --G500,
    "#EBE8F8": --V50,
    "#664BEE": --V500,
    // "#5865F2": --V500,
    "#EDF1F5": --N100,
    // "#0091E2": --B400,
    // "#3385D6": --B400,
    // "#FDE7E7": --R100,
    "#E6EEFF": --B100,
    // "#326CE5": --B400,
    // "#C1D2F7": --B200,
    // "#000": --N900,
    "#B1B7BC": --N300,
    // "#6b778c": --N500,
    // "#023E8A": --B700,
    // "#0077B6": --B600,
    // "#0096C7": --B400,
    // "#00B4D8": --B300,
    // "#48CAE4": --B300,
    // "#2589C7": --B400,
    // "#0E71AF": --B600,
    // "#53ABDB": --B300,
    // "#1E85C5": --B400,
    // "#6DC4F3": --B200,
    "#FFB549": --Y500,
    // "#FFE5BE": --Y200,
    "#FFFFFF": --white,
    // "#CDD0EE": --B200,
    // "#FFF5E5": --Y100,
    // "#40B4E5": --B300,
    // "#003764": --B700,
    // "#B486C0": --V200,
    // "#F0F5FF": --B50,
    // "#202020": --N900,
    // "#F3A29D": --R300,
    // "#FAB6AF": --R200,
    // "#222768": --V700,
    // "#FBB4AD": --R200,
    // "#F04C49": --R500,
    // "#D2D2D2": --N200,
    // "#428DFB": --B400,
    // "#23286B": --V700,
    "#FF7E5B": --O500,
    // "#FBB823": --Y600,
    // "#50433E": --N700,
    // "#F05B25": --O600,
    // "#3CBDF4": --B300,
    // "#2498CA": --B300,
    // "#18BC9C": --G300,
    // "#E6FBFF": --B50,
    "#F3F0FF": --V100,
    // "#FFEDF2": --R50,
    // "#EB456D": --R400,
    // "red": --R500,
    "#E9FBF4": --G100,
    // "#4D4D4D": --N700,
    // "#C58D36": --Y600,
    // "#FFCB5D": --Y400,
    // "#DE350B": --R700,
    // "#80AEF2": --B200,
    // "#94BBF8": --B200,
    // "#1D225F": --V700,
    // "#98BDF9": --B200,
    // "#2174DB": --B400,
    // "#D6D7D8": --N200,
    // "#E9E9E9": --N200,
    // "#E94A47": --R500,
    "#9FA4A9": --N600,
    // "#AC825A": --Y700,
    // "#FF9900": --Y500,
    // "#FAD52A": --Y300,
    // "#D83249": --R500,
    // "#FF4F59": --R400,
    // "#F4511E": --O600,
    "#080A2D": --N800,
    // "#FFC639": --Y500,
    // "#428DFC": --B400,
    // "#DDDEE3": --N200,
    // "#E4E4E8": --N200,
    // "#D8E4FC": --B100,
    // "#ECEEF0": --N100,
    // "#EFEFEF": --N100,
    // "#93B3EF": --B200,
    // "#D4D6D8": --N200,
    // "#E1EAFC": --B100,
    // "#E6EEFC": --B100,
    // "#EAF1FD": --B100,
    // "#E0E0E1": --N200,
    // "#FFBEB6": --R200,
    // "#1C2868": --V700,
    // "#151A4F": --V700,
    // "#78A9EF": --B300,
    // "#965353": --N700,
    // "#A0D468": --G300,
    // "#007CA6": --B600,
    // "#434A54": --N700,
    // "#22637D": --B600,
    // "#3BAFDA": --B300,
    // "#4FC2E9": --B300,
    // "#556080": --N600,
    // "#FABE73": --O300,
    // "#34BA92": --G300,
    // "#B0C6DF": --B200,
    // "#434B5D": --N700,
    // "#4F5E7E": --N600,
    // "#6FAEDE": --B200,
    // "#7BB1ED": --B200,
    // "#81B4F6": --B200,
    // "#77B7FF": --B200,
    // "#5BAFF0": --B300,
    // "#6C91B3": --N500,
    // "#FFC63D": --Y500,
    // "#FC636E": --R400,
    // "#FF8982": --R300,
    // "#00C48F": --G300,
    // "#80B7E0": --B200,
);

:where(svg:not(.svg__no-override)) {
    @each $hex, $var in $svg-stroke-hex-to-var {
        [stroke="#{$hex}" i] {
            stroke: var($var);
        }
    }

    @each $hex, $var in $svg-fill-hex-to-var {
        [fill="#{$hex}" i] {
            fill: var($var);
        }
    }
}

